details: change duplicated short-key 'd' to 'e' on Overview tab
add hardware also use 'd' as its short-key.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -814,7 +814,7 @@
                                             <property name="can_focus">False</property>
                                             <property name="xalign">0</property>
                                             <property name="yalign">0</property>
-                                            <property name="label" translatable="yes">_Description:</property>
+                                            <property name="label" translatable="yes">D_escription:</property>
                                             <property name="use_underline">True</property>
                                             <property name="mnemonic_widget">overview-description</property>
                                           </object>
