details: Improve UI labeling of keyboard devices

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -4532,7 +4532,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                   <object class="GtkLabel" id="label407">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Virtual Pointer&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Virtual Input Device&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                 </child>
