create: Renamed 'advanced options' to 'network selection'
Since that's all it contains now

--- a/ui/create.ui
+++ b/ui/create.ui
@@ -2384,7 +2384,9 @@ is not yet supported.&lt;/small&gt;</property>
                               <object class="GtkLabel" id="label8">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">Advanced options</property>
+                                <property name="label" translatable="yes">N_etwork selection</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">config-advanced-expander</property>
                               </object>
                             </child>
                           </object>
