--- a/ui/clone.ui
+++ b/ui/clone.ui
@@ -48,9 +48,9 @@
                       <object class="GtkLabel" id="label2">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">&lt;span size='large' color='white'&gt;Clone virtual machine&lt;/span&gt;</property>
                         <property name="use_markup">True</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
                         <property name="expand">True</property>
@@ -100,8 +100,9 @@
                           <object class="GtkLabel" id="clone-orig-name">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="xalign">0</property>
                             <property name="label">orig name</property>
+                            <property name="ellipsize">end</property>
+                            <property name="xalign">0</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -112,8 +113,8 @@
                           <object class="GtkLabel" id="label4">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="xalign">0</property>
                             <property name="label" translatable="yes">Create clone based on:</property>
+                            <property name="xalign">0</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -124,8 +125,8 @@
                           <object class="GtkLabel" id="label9">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="xalign">1</property>
                             <property name="label" translatable="yes">Destination host:</property>
+                            <property name="xalign">1</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -136,9 +137,10 @@
                           <object class="GtkLabel" id="clone-dest-host">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="xalign">0</property>
                             <property name="label">dest host</property>
+                            <property name="ellipsize">end</property>
                             <property name="lines">0</property>
+                            <property name="xalign">0</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -173,8 +175,8 @@
                                   <object class="GtkLabel" id="clone-no-net">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="xalign">0</property>
                                     <property name="label" translatable="yes">No networking devices</property>
+                                    <property name="xalign">0</property>
                                   </object>
                                   <packing>
                                     <property name="expand">True</property>
@@ -210,10 +212,10 @@
                               <object class="GtkLabel" id="label7">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="xalign">1</property>
-                                <property name="yalign">0</property>
                                 <property name="label" translatable="yes">&lt;span color='#484848'&gt;Networking:&lt;/span&gt;</property>
                                 <property name="use_markup">True</property>
+                                <property name="xalign">1</property>
+                                <property name="yalign">0</property>
                               </object>
                               <packing>
                                 <property name="top_attach">1</property>
@@ -230,8 +232,8 @@
                                   <object class="GtkLabel" id="clone-no-storage-pass">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="xalign">0</property>
                                     <property name="label" translatable="yes">No storage to clone</property>
+                                    <property name="xalign">0</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -336,10 +338,10 @@
                               <object class="GtkLabel" id="label6">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="xalign">1</property>
-                                <property name="yalign">0</property>
                                 <property name="label" translatable="yes">&lt;span color='#484848'&gt;Storage:&lt;/span&gt;</property>
                                 <property name="use_markup">True</property>
+                                <property name="xalign">1</property>
+                                <property name="yalign">0</property>
                               </object>
                               <packing>
                                 <property name="top_attach">2</property>
@@ -351,11 +353,11 @@
                               <object class="GtkLabel" id="label3">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="xalign">1</property>
                                 <property name="label" translatable="yes">&lt;span color='#484848'&gt;_Name:&lt;/span&gt;</property>
                                 <property name="use_markup">True</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">clone-new-name</property>
+                                <property name="xalign">1</property>
                               </object>
                               <packing>
                                 <property name="x_options">GTK_FILL</property>
@@ -421,10 +423,10 @@
                             <property name="can_focus">False</property>
                             <property name="halign">start</property>
                             <property name="hexpand">False</property>
-                            <property name="xalign">0</property>
                             <property name="label" translatable="yes">&lt;span size='small'&gt;Cloning creates a new, independent copy of the original disk. Sharing
 uses the existing disk image for both the original and the new machine.&lt;/span&gt;</property>
                             <property name="use_markup">True</property>
+                            <property name="xalign">0</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -639,8 +641,8 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                               <object class="GtkLabel" id="change-mac-type">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="xalign">0</property>
                                 <property name="label">type string</property>
+                                <property name="xalign">0</property>
                               </object>
                             </child>
                           </object>
@@ -660,9 +662,9 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                               <object class="GtkLabel" id="change-mac-orig">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="xalign">0</property>
                                 <property name="label">orig-mac</property>
                                 <property name="width_chars">20</property>
+                                <property name="xalign">0</property>
                               </object>
                             </child>
                           </object>
@@ -691,10 +693,10 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                           <object class="GtkLabel" id="label10">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="xalign">1</property>
                             <property name="label" translatable="yes">New _MAC:</property>
                             <property name="use_underline">True</property>
                             <property name="mnemonic_widget">change-mac-new</property>
+                            <property name="xalign">1</property>
                           </object>
                           <packing>
                             <property name="right_attach">2</property>
@@ -729,9 +731,9 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                           <object class="GtkLabel" id="label77">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="xalign">1</property>
                             <property name="label" translatable="yes">&lt;span color='#484848'&gt;Type:&lt;/span&gt;</property>
                             <property name="use_markup">True</property>
+                            <property name="xalign">1</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -744,9 +746,9 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                           <object class="GtkLabel" id="label16">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="xalign">1</property>
                             <property name="label" translatable="yes">&lt;span color='#484848'&gt;MAC:&lt;/span&gt;</property>
                             <property name="use_markup">True</property>
+                            <property name="xalign">1</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -892,8 +894,8 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                       <object class="GtkLabel" id="change-storage-size">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label">size</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -907,8 +909,8 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                       <object class="GtkLabel" id="change-storage-target">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label">target</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -922,11 +924,11 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                       <object class="GtkLabel" id="change-storage-orig">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label">orig-path</property>
                         <property name="ellipsize">start</property>
                         <property name="width_chars">25</property>
                         <property name="max_width_chars">25</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -938,10 +940,10 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                       <object class="GtkLabel" id="label15">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">1</property>
-                        <property name="yalign">1</property>
                         <property name="label" translatable="yes">&lt;span color='#484848'&gt;Size:&lt;/span&gt;</property>
                         <property name="use_markup">True</property>
+                        <property name="xalign">1</property>
+                        <property name="yalign">1</property>
                       </object>
                       <packing>
                         <property name="top_attach">2</property>
@@ -954,9 +956,9 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                       <object class="GtkLabel" id="label14">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">1</property>
                         <property name="label" translatable="yes">&lt;span color='#484848'&gt;Target:&lt;/span&gt;</property>
                         <property name="use_markup">True</property>
+                        <property name="xalign">1</property>
                       </object>
                       <packing>
                         <property name="top_attach">1</property>
@@ -969,9 +971,9 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                       <object class="GtkLabel" id="label13">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">1</property>
                         <property name="label" translatable="yes">&lt;span color='#484848'&gt;Path:&lt;/span&gt;</property>
                         <property name="use_markup">True</property>
+                        <property name="xalign">1</property>
                       </object>
                       <packing>
                         <property name="x_options">GTK_FILL</property>
@@ -991,8 +993,8 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
                     <property name="label" translatable="yes">Existing disk</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="right_attach">2</property>
@@ -1024,11 +1026,11 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                       <object class="GtkLabel" id="label12">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">1</property>
                         <property name="label" translatable="yes">&lt;span color='#484848'&gt;New _Path:&lt;/span&gt;</property>
                         <property name="use_markup">True</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">change-storage-new</property>
+                        <property name="xalign">1</property>
                       </object>
                     </child>
                   </object>
