--- a/ui/details.ui
+++ b/ui/details.ui
@@ -559,7 +559,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="is_important">True</property>
-                    <property name="label" translatable="yes">_Cancel</property>
+                    <property name="label" translatable="yes">_Cancel Installation</property>
                     <property name="use_underline">True</property>
                     <property name="stock_id">gtk-cancel</property>
                     <signal name="clicked" handler="on_details_cancel_customize_clicked" swapped="no"/>
