--- a/ui/delete.ui
+++ b/ui/delete.ui
@@ -7,7 +7,6 @@
     <property name="height_request">350</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Delete Virtual Machine</property>
-    <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="type_hint">dialog</property>
     <signal name="delete-event" handler="on_vmm_delete_delete_event" swapped="no"/>
@@ -45,9 +44,9 @@
                   <object class="GtkLabel" id="header-label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
                     <property name="label">&lt;span size='large' color='white'&gt;Placeholder&lt;/span&gt;</property>
                     <property name="use_markup">True</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -134,6 +133,7 @@
                     <property name="can_focus">True</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
+                    <property name="hscrollbar_policy">never</property>
                     <property name="shadow_type">etched-in</property>
                     <child>
                       <object class="GtkTreeView" id="delete-storage-list">
