details: Raise upper limits for lxc ID namespaces (bz 1244490)

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -37,13 +37,13 @@
     <property name="page_increment">25</property>
   </object>
   <object class="GtkAdjustment" id="adjustment16">
-    <property name="upper">65536</property>
+    <property name="upper">10000000</property>
     <property name="value">1000</property>
     <property name="step_increment">1</property>
     <property name="page_increment">25</property>
   </object>
   <object class="GtkAdjustment" id="adjustment17">
-    <property name="upper">65536</property>
+    <property name="upper">10000000</property>
     <property name="value">1000</property>
     <property name="step_increment">1</property>
     <property name="page_increment">25</property>
